# Clawspan

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _commit_builder.sh  clawspan_pipeline.py  clawspan_tools.py  config.py  jarvis_pipeline.py  jarvis_tools.py  main.py  pyproject.toml  requirements.txt  setup.sh  utils.py  wake_word.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
agents/: __init__.py  calendar_agent.py  claude_agent.py  coding_agent.py  deepcoder_agent.py  deploy_monitor_agent.py  github_action_agent.py  github_monitor_agent.py  research_agent.py  system_agent.py  writer_agent.py
agents/incident-commander/sessions/: 01803f0b-4fa6-4d03-b67b-73285576fdf9.jsonl.deleted.2026-04-12T02-04-55.274Z  02d72cf5-ffb8-4304-a060-609367ff76c4.jsonl.deleted.2026-04-12T20-04-21.508Z  04eede4e-77ee-48d9-89e6-70c37ac290a6.jsonl.deleted.2026-04-12T12-58-34.090Z  079906ca-2b4f-4091-866b-c0c602b773e8.jsonl.deleted.2026-04-12T03-12-25.183Z  08263862-646e-4263-a7a0-c078a22cd764.jsonl  0be582c6-d640-4f0b-8d2a-0d978453981a.jsonl  (+85 more)
auth/: __init__.py  google.py
core/: __init__.py  auth.py  awareness.py  base_agent.py  context.py  fact_extractor.py  github_router.py  llm.py  mute_while_bot_speaking.py  onboarding.py  profile.py  prompts.py  response.py  router.py
hud/: README.md  index.html  main.js  package-lock.json  package.json
native_aec/: aec_mic  aec_mic.swift
shared/: memory.py  mempalace_adapter.py
tests/: conftest.py  test_auth.py  test_deploy_monitor.py  test_github_action.py  test_github_api.py  test_github_monitor.py  test_github_router.py  test_onboarding.py
tools/: __init__.py  aec_mic.py  aec_transport.py  applescript.py  apps.py  aws_monitor.py  chrome.py  clipboard.py  deploy_monitor.py  files.py  finder.py  github_api.py  github_cache.py  google.py  hunter.py  memory.py  mouse.py  music.py  research.py  search.py  system.py  terminal.py  vision.py  writer.py
tools/voice_tools/: __init__.py  comms.py  deploy.py  desktop.py  github_tool.py  memory_tool.py  music.py  research.py  shell.py  system.py  writer.py
voice/: __init__.py  auth_gate.py  hud_server.py  mute_strategies.py  pipeline.py  system_prompt.py
(+4 files in other folders)
